[package]
name = "alerts"
version = "0.1.0"
edition = "2021"
authors = ["onoriel <onoriel@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v4"] }
mongodb = "2"
bson = "2.6.1"
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }